--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,8 +1,7 @@
 on:
   push:
     branches:
-    - "Feature-PR"
-#    - "feature/*"  # Support wildcard matching
+    - "feature/*"  # Support wildcard matching
 
 jobs:
   pull-request:
@@ -12,15 +11,15 @@ jobs:
     - name: pull-request
       uses: repo-sync/pull-request@v2
       with:
-        source_branch: "Feature-PR"                                   # If blank, default: triggered branch
-        destination_branch: "Feature-PR-Review"                       # If blank, default: master
-        pr_title: "Pulling ${{ github.ref }} into Feature-PR-Review"  # Title of pull request
-        pr_body: ":crown: *An automated PR*"                          # Full markdown support, requires pr_title to be set
-#        pr_template: ".github/PULL_REQUEST_TEMPLATE.md"               # Path to pull request template, requires pr_title to be set, excludes pr_body
-#        pr_reviewer: "wei,worker"                                     # Comma-separated list (no spaces)
-#        pr_assignee: "wei,worker"                                     # Comma-separated list (no spaces)
-        pr_label: "auto-pr"                                           # Comma-separated list (no spaces)
-#        pr_milestone: "Milestone 1"                                   # Milestone name
+        source_branch: ""                                 # If blank, default: triggered branch
+        destination_branch: "master"                      # If blank, default: master
+        pr_title: "Pulling ${{ github.ref }} into master" # Title of pull request
+        pr_body: ":crown: *An automated PR*"              # Full markdown support, requires pr_title to be set
+#        pr_template: ".github/PULL_REQUEST_TEMPLATE.md"   # Path to pull request template, requires pr_title to be set, excludes pr_body
+#        pr_reviewer: "wei,worker"                         # Comma-separated list (no spaces)
+#        pr_assignee: "wei,worker"                         # Comma-separated list (no spaces)
+        pr_label: "auto-pr"                               # Comma-separated list (no spaces)
+#        pr_milestone: "Milestone 1"                       # Milestone name
         pr_draft: true                                    # Creates pull request as draft
         pr_allow_empty: true                              # Creates pull request even if there are no changes
-        github_token: ${{ secrets.API_TOKEN_GITHUB }}
+        github_token: ${{ secrets.API_GITHUB_TOKEN }}
