--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -22,7 +22,9 @@ jobs:
 #        pr_milestone: "Milestone 1"                       # Milestone name
         pr_draft: true                                    # Creates pull request as draft
         pr_allow_empty: true                              # Creates pull request even if there are no changes
-        github_token: ${{ secrets.API_GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+
+# 123123131232535235323523225352
 
 # 123123131232535235323523225352
 
