--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-    - "feature/*"  # Support wildcard matching
+    - "feature-arham"  # Support wildcard matching
 
 jobs:
   pull-request:
@@ -22,4 +22,4 @@ jobs:
 #        pr_milestone: "Milestone 1"                       # Milestone name
         pr_draft: true                                    # Creates pull request as draft
         pr_allow_empty: true                              # Creates pull request even if there are no changes
-        github_token: ${{ secrets.API_GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
