--- a/.github/workflows/update_submodule.yaml
+++ b/.github/workflows/update_submodule.yaml
@@ -18,7 +18,7 @@ jobs:
         with: 
           repository: sabih-jogo/react-native-chat-app
           ref: master #specify the branch name to checkout
-          token: ${{ secrets.PRIVATE_TOKEN_GITHUB }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
